Use env vars for Livechat build
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/apps/livechat/lib/index.html
+++ b/apps/livechat/lib/index.html
@@ -19,6 +19,7 @@
                 box-sizing: border-box;
             }
         </style>
+				<script src="/env-config.js"></script>
     </head>
 
     <body>
